--- a/index.html
+++ b/index.html
@@ -5,18 +5,41 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <nav class="navbar">
+        <div class="menu">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Shop</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-        </nav>
-        <img class="bakgrunn" src="img/James_Bond_logo (1).jpeg" alt="top-bilde">
-        <div>
+          </div>
+        <div class="section1">
+            <header>
+                <h1>James Bond Museum</h1>
+                <p>Visit the best james bond museum in the world</p>
+            </header>
+        </div>
+        <div class="section2">
+            <h1>Lorem ipsum dolor</h1>
             <p>
-                rwhyeqarheqrhyerhyerhehwegbwvfiouhbfWAOFIBAfoijbfgoifjAOFPIUHAfgpoihfg
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+        </div>
+        <div class="section3"></div>
+        <div class="section4">
+            <h1>Lorem ipsum dolor</h1>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
         </div>
     </body>
