--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <div class="menu">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
           </div>
+          
         <div class="section1">
             <header>
                 <h1>James Bond Museum</h1>
@@ -20,14 +19,14 @@
             </header>
         </div>
         <div class="section2">
-            <h1>Lorem ipsum dolor</h1>
+            <h1>Where to find us</h1>
             <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                Visit the only james bond museum in Nybro Sweden.
+                Here yo will find cars, watches, motorbikes, costumes and many more props that has been used in the legendary James bond films.
+            </p>
+            <p>
+                <strong>Adress:</strong> <br>
+                Emmabodavegen 20, 382 45 Nybro, Sweden
             </p>
         </div>
         <div class="section3"></div>
